--- a/inboxjournal/templates/inboxjournal/login.html
+++ b/inboxjournal/templates/inboxjournal/login.html
@@ -1,4 +1,4 @@
-{% extends "revnal/base.html" %}
+{% extends "base.html" %}
 {% block title %}Login{% endblock %}
 {% block content %}
 <h1>REVNAL</h1>
